engine-net-2/examples/Errors/SequenceParametersOutTypeMismatch.grs
new graph "Rules.grg"

exec (n:N)=init ;> (o:O)=s(n)

quit
